fix tests in spi